@@ -82,6 +82,7 @@
     </child>
   </object>
   <object class="GtkDialog" id="dialog_existing_or_new">
+    <property name="border_width">6</property>
     <property name="title" translatable="yes">Welcome to Glom</property>
     <property name="default_width">480</property>
     <property name="default_height">320</property>
@@ -91,14 +92,14 @@
       <object class="GtkVBox" id="dialog-vbox1">
         <property name="visible">True</property>
         <property name="orientation">vertical</property>
+        <property name="spacing">6</property>
         <child>
           <object class="GtkHBox" id="hbox8">
             <property name="visible">True</property>
-            <property name="border_width">12</property>
+            <property name="border_width">6</property>
             <property name="spacing">6</property>
             <child>
               <object class="GtkImage" id="image3">
-                <property name="visible">True</property>
                 <property name="xalign">0</property>
                 <property name="yalign">0</property>
                 <property name="stock">gtk-dialog-question</property>
@@ -117,7 +118,6 @@
                 <property name="spacing">12</property>
                 <child>
                   <object class="GtkLabel" id="existing_or_new_label">
-                    <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="xalign">0</property>
                     <property name="yalign">0</property>
@@ -460,7 +460,6 @@
     </action-widgets>
   </object>
   <object class="GtkWindow" id="window_progress">
-    <property name="visible">False</property>
     <property name="title" translatable="yes">Processing</property>
     <child>
       <object class="GtkVBox" id="vbox84">
